--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,5 +9,87 @@ html {
 body {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
-
 }
+
+a {
+    text-decoration: none;
+}
+
+.main-content{
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header {
+    background: #FFFCF4;
+}
+
+.fixed {
+    position: sticky;
+    top: -28px;
+}
+
+.header .body {
+    display: flex;
+    align-items: center;
+    padding: 36px 0 8px;
+   
+}
+
+.nav {
+    margin-left: auto;
+}
+
+.nav ul {
+    display: flex;
+}
+
+.nav a {
+    position: relative;
+    padding: 8px 21px;
+    font-size: 1.6rem;
+    color: #5F5B53;
+}
+
+.nav a:hover,
+.nav li.active a {
+    /* font-weight: 600; */
+    text-shadow: 1px 0 0 currentColor;
+    color: #171100;
+}
+
+.nav li.active a::after {
+    position: absolute;
+    left: 21px;
+    bottom: 6px;
+    display: block;
+    content: "";
+    background: #171100;
+    width: 12px;
+    height: 2px;
+    border-radius: 1px;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 118px;
+    font-size: 1.6rem;
+    text-align: center;
+    line-height: 50px;
+    font-weight: 600;
+    color: #fff;
+    background: #171100;
+    padding: 0 16px;
+    border-radius: 24.5px;
+}
+
+.header .sign-up-btn {
+    min-width: 144px;
+}
+
+.header .action {
+    margin-left: 49px;
+}
+
