--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+:root {
+    --font-heading: Sen, sans-serif;
+    --color-primary: #FFB900;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -28,6 +33,7 @@ a {
 
 .fixed {
     position: sticky;
+    z-index: 999;
     top: -28px;
 }
 
@@ -82,8 +88,31 @@ a {
     color: #fff;
     background: #171100;
     padding: 0 16px;
-    border-radius: 24.5px;
+    border-radius: 999px;
 }
+
+.btn {
+    opacity: 0.9;
+}
+
+/* heading */
+.heading {
+    font-family: var(--font-heading);
+    font-weight: 700;
+    letter-spacing: -0.02em;
+    color: #171100;
+}
+
+.heading.lv1 {
+    font-size: 5.8rem;
+    line-height: 1.17;
+}
+
+.heading.lv2 {
+    font-size: 3.8rem;
+    line-height: 1.26;
+}
+
 
 .header .sign-up-btn {
     min-width: 144px;
@@ -93,3 +122,209 @@ a {
     margin-left: 49px;
 }
 
+.hero {
+    padding: 56px 0 65px;
+}
+
+.hero .body {
+    display: flex;
+}
+
+.hero .media-block {
+    position: relative;
+    width: 48%;
+}
+.hero .content-block {
+    width: 52%;
+    padding: 64px 0 0 130px;
+}
+
+.hero .media-block .img {
+    display: block;  /* loại bỏ baseline của thẻ inline-block (img) */
+    width: 470px;
+    height: 685px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.hero-sumary {
+    position: absolute;
+    right: 0;
+    bottom: 48px;
+    width: 270px;
+    padding:24px;
+    background: #FFFFFF;
+    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05);
+    border-radius: 12px;
+}
+
+.hero-sumary .item {
+    display: flex;
+    align-items: center;
+}
+.hero-sumary .item + .item {
+    margin-top: 22px;
+}
+
+.hero-sumary .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background: #FFF9E8;
+}
+/* /change color icon */
+.hero-sumary .item:nth-of-type(2) .icon {
+    background: #FCEFFF;
+}
+.hero-sumary .item:nth-of-type(3) .icon {
+    background: #EBEAFF;
+}
+
+.hero-sumary .info {
+    margin-left: 16px;
+}
+.hero-sumary .label {
+    font-size: 14px;
+    line-height: 1.86;
+    color: #5F5B53;
+
+}
+.hero-sumary .title {
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #171100;   
+}
+
+
+.hero .desc {
+    margin-top: 22px;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #5F5B53;
+}
+
+.hero .cta-group{
+    display: flex;
+    align-items: center;
+    margin: 38px 0 48px;
+}
+
+.cta-group .hero-cta {
+    background: var( --color-primary);
+    min-width: 180px; height: 64px;
+    font-size: 1.8rem;
+    line-height: 64px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.hero .watch-video {
+    display: flex;
+    margin-left: 28px;
+    border: none;
+    background: transparent;
+    align-items: center;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.hero .watch-video .icon {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    background: #FFFFFF;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.07);
+}
+
+.hero .watch-video span {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-left: 14px;
+    line-height: 1.67;
+    color: #171100;
+}
+.hero .stats {
+    margin-left: 28px;
+}
+.hero .stats strong{
+    padding:0 10px 0 28px;
+    font-family: var(--font-heading);
+    margin-top: 4.8rem;
+    font-weight: 700;
+    font-size: 4.4rem;
+    line-height: 54px;
+    color: #171100;
+
+}
+
+/* popular */
+.popular {
+    margin-top: 135px;
+    padding: 65px 0;
+}
+
+.popular-top {
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    align-items: center;
+}
+
+.popular-top .desc{
+    font-size: 1.8rem;
+    width: 458px;
+    margin-top: 16px;
+    margin-bottom: 55px;
+    line-height: 1.67;
+    color: #5F5B53;
+}
+ 
+.controls {
+    display: flex;
+}
+
+.controls .controls-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary);
+    margin-left: 18px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.controls .controls-btn:hover {
+    background: var(--color-primary);
+    color: #fff;
+    cursor: pointer;
+}
+
+.card {
+    display: flex;
+    gap: 30px;
+}
+
+.popular .card-item{
+    flex: 1;
+    background: #FFFFFF;
+    box-shadow: 0px 18px 36px rgba(0, 0, 0, 0.05);
+    border-radius: 12px;
+}
+
+.card .card-item .thumb {
+    display: block;
+    width: 100%;
+    height: 278px;
+    object-fit: cover;
+    border-radius: 12px 12px 0px 0px;
+}
