--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,6 @@ a {
     line-height: 1.26;
 }
 
-
 .header .sign-up-btn {
     min-width: 144px;
 }
@@ -425,7 +424,340 @@ a {
 }
 
 .feedback {
-    width: 100%;
+    margin-top: 135px;
+    padding: 96px 0;
     height: 380px;
     background-color: #171100;
+}
+
+.feedback-list {
+    display: flex;
+    overflow: hidden;  /* ẩn thẻ con bên ngoài */
+    
+}
+
+.feedback-item{
+    display: flex;
+    width: 100%;
+    flex-shrink: 0;
+    /* transform: translateX(100%); */
+}
+
+.feedback-item .avatar{
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.feedback-item .title {
+    font-family: var(--font-heading);
+    margin-top: 18px;
+    font-weight: 700;
+    font-size: 2.4rem;
+    line-height: 1.3;
+    color: #F7F7F7;
+}
+
+.feedback-item .desc {
+    margin-top: 4px;
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #BFBCB3;
+}
+
+.feedback-item blockquote {
+    margin-left: 30px;
+    font-size: 2.6rem;
+    line-height: 1.54;
+    color: #FFFFFF;
+}
+
+
+.feedback-item .dots {
+    display: flex;
+    margin-top: 28px;
+
+}
+
+.feedback-item .dot {
+    margin-right: 6px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #634700;
+    cursor: pointer;
+}
+
+.feedback-item .dot.active{
+    cursor: default;
+    background: #FFB900;
+}
+
+.feedback-item .content {
+    width: 66%;
+    font-style: italic;
+    margin-left: auto;
+}
+
+.futures{
+    margin-top: 135px;
+    padding: 65px 0;
+}
+
+.futures .body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.body .images {
+    display: flex;
+    gap: 0 30px;
+}
+
+.body .images img {
+    width: 270px;
+    height: 404px;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.body img.lower {
+    margin-top: 34px;
+}
+
+.futures .content {
+    width: 41%;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.body .content .desc {
+    margin-top: 16px;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #5F5B53;
+}
+
+.futures .content .cta-btn{
+    margin-top: 32px;
+    min-width: 137px;
+    background: var(--color-primary);
+    color: #FFFFFF;
+
+}
+
+.futures-2{
+    margin-top: 70px;
+}
+
+.futures-2 .body{
+    flex-direction: row-reverse;
+}
+
+.futures-2 .body .content {
+    width: 49%;
+}
+
+.futures-2 .images img {
+    width: 470px;
+    height: 440px;
+}
+
+.blog {
+    margin-top: 135px;
+    background: #FFFCF4;
+}
+
+.blog .blog-top {
+    padding: 96px 0 55px;
+    text-align: center;
+}
+
+.blog .blog-top .desc {
+    margin: 16px auto;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    text-align: center;
+    color: #696262;
+    width: 448px;
+}
+
+.blog-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 39px;
+    gap: 30px;
+    /* width: 100%; */
+    overflow: hidden;
+}
+
+.thumb {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.blog-list .blog-item {
+    flex-shrink: 0;
+    width:calc(33.33% - 20px);
+    background: #FFFFFF;
+    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05);
+    border-radius: 16px;
+    
+}
+
+.blog-item .info {
+    padding: 20px 28px;
+}
+
+.blog-item .info span {
+    padding: 12px 0;
+}
+
+.blog-item .info .date {
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #5F5B53;
+}
+
+.blog-item .info .date::before {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background: var(--color-primary);
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.blog-item .info .date::after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    right: -27px;
+    bottom: 0;
+    width: 160px;
+    height: 1px;
+    background: #E2DFDA;
+    border-radius: 0.5px;;
+}
+
+.blog-item .info .title{
+    display: inline-block;
+    margin: 12px 0;
+}
+
+.blog-item .info .title a {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 28px;
+    color: #171100;
+}
+
+.blog-item .cta-btn {
+    min-width: 118px;
+    font-size: 1.4rem;
+}
+
+.blog-item .cta-btn:hover {
+    background: var(--color-primary);
+}
+
+.blog .dot-list {
+    padding: 38px 0 96px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+}
+
+.blog .dot {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #5F5B53;
+    cursor: pointer;
+}
+
+.blog .dot.active {
+    background: var(--color-primary);
+    cursor: default;
+}
+
+.footer {
+    padding: 96px 135px 0;
+    background: #2E2100;
+}
+
+.footer .row {
+    display: flex;
+    padding-bottom: 38px;
+    border-bottom: 1px solid #59554B;
+}
+
+.footer .row .column {
+    width: 21.6%;
+}
+
+.footer .row .column:nth-child(1) {
+    width: 35%;
+}
+
+.footer .desc {
+    margin: 18px 0;
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #BFBCB2;
+    max-width: 267px;
+}
+
+.footer .socials {
+    display: flex;
+    gap: 18px;
+}
+
+.footer .title {
+    display: inline-block;
+    padding:0 48px 14px 0;
+    border-bottom: 1px solid #59554B;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #FFFFFF;
+}
+
+.footer .list {
+    margin-top: 28px;
+}
+
+.footer .list a{
+    display: inline-block;
+    font-size: 1.4rem;
+    line-height: 1.75;
+    color: #BFBCB2;
+    margin-bottom: 12px;
+}
+
+.footer .list li:last-child a{
+   margin-bottom: 0;
+}
+
+.footer .list strong {
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+.footer .copyright {
+    padding: 28px 0;
+    font-size: 14px;
+    line-height: 26px;
+    text-align: center;
+    color: #807D74;
+
 }
